--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,3 +2,19 @@ $text-color-inverse: #fff;
 $component-background: #fff;
 $background-color-base: #f5f5f5;
 $component-background: #fff;
+
+$black: #000;
+$title-color: fade(#000, 85%);
+$text-color-second: fade($black, 45%);
+$primary-color: #1890ff;
+
+
+$body-background: #fff;
+$layout-header-background: #001529;
+$shadow-color: rgba(0, 0, 0, 0.15);
+$shadow-down: 0 2px 8px $shadow-color;
+$base-bg-color: $body-background;
+$header-bg-color-dark: $layout-header-background;
+$border-color-split: rgba(0, 0, 0, 0.15);
+
+$theme-list: light, dark, night;
